--- a/.gitconfig
+++ b/.gitconfig
@@ -1,38 +1,52 @@
 [user]
-	name = Mulia Arifandi Nasution
-	email = mul14.net@gmail.com
+    name = Mulia Arifandi Nasution
+    email = mul14.net@gmail.com
+    signingkey = 9D307CB69C566C62
+    
+    [gpg]
+        program = gpg
 [alias]
-	br = branch
-	st = status
-	co = checkout
-	cm = commit -m
-	log1 = log --oneline
-    assume = update-index --assume-unchanged --
-    noassume = update-index --no-assume-unchanged --
+    br = branch
+    st = status
+    co = checkout
+    cm = commit -m
+    log1 = log --oneline
+    
     unstage = reset HEAD --
+    undo = reset --soft HEAD~1
+
     worddiff = !git diff --color | diff-highlight | less -r
+
+    omit = update-index --assume-unchanged --
+    ignored = ls-files -v | grep "^[[:lower:]]"
+    unignore = update-index --no-assume-unchanged --
+
+    standup = --all \
+              --author=$USER \
+              --since='9am yesterday' \
+              --format=%s
 [core]
-	editor = /usr/local/bin/vim
-	autocrlf = input
+    editor = /usr/local/bin/vim
+    autocrlf = input
     # excludesfile = /Users/mul14/.gitignore_global
     pager = diff-highlight | less -r
 [filter "media"]
-	required = true
-	clean = git media clean %f
+    required = true
+    clean = git media clean %f
     smudge = git media smudge %f
 [diff]
     ; external = git-wdiff
 [difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
+    cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+    path =
 [mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+    cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+    trustExitCode = true
 [push]
-	default = simple
+    default = simple
 [filter "hawser"]
-	clean = git hawser clean %f
-	smudge = git hawser smudge %f
-	required = true
+    clean = git hawser clean %f
+    smudge = git hawser smudge %f
+    required = true
 [credential]
-	helper = cache --timeout=7200
+    helper = cache --timeout=7200
